[gd_scene load_steps=29 format=4 uid="uid://ccv23w3x8awof"]

[ext_resource type="Shader" uid="uid://bbse323pr0vvv" path="res://addons/eye_dropper/eye_dropper.gdshader" id="1_05qxl"]
[ext_resource type="Texture2D" uid="uid://e46iwncnyrl0" path="res://assets/GRAPHICS/PALETTES/bastille-8-1x.png" id="2_o0ok4"]
[ext_resource type="Texture2D" uid="uid://dpkceqajk0jtn" path="res://assets/GRAPHICS/PALETTES/grotesquely-cute-1x.png" id="3_kubw5"]
[ext_resource type="TileSet" uid="uid://1h607v1lcoyp" path="res://assets/GRAPHICS/Bountiful-Bits-v-3.1/bountiful_bits_tileset.tres" id="4_s0suj"]
[ext_resource type="PackedScene" uid="uid://4ybnmc4j2y3v" path="res://player/player.tscn" id="5_o0ok4"]
[ext_resource type="PackedScene" uid="uid://cj0n05i73dafs" path="res://death_zone/death_zone.tscn" id="6_kubw5"]
[ext_resource type="Material" uid="uid://cpxp85woyyt4p" path="res://death_zone/water_1_material.tres" id="7_wgs0e"]
[ext_resource type="Texture2D" uid="uid://by16vd6sv123v" path="res://death_zone/white.png" id="8_tig7g"]
[ext_resource type="PackedScene" uid="uid://nnpgkaoylgj" path="res://platform/platform_small.tscn" id="9_tig7g"]
[ext_resource type="PackedScene" uid="uid://cp0sirp6ywnyg" path="res://air_current/air_current.tscn" id="10_drtee"]
[ext_resource type="Script" uid="uid://i5cfvrtyqmxm" path="res://air_current/air_current_follower.gd" id="11_8tme2"]
[ext_resource type="Script" uid="uid://cj5j4ybo5t3eq" path="res://persistancy_system/actions/toggle_action.gd" id="12_8tme2"]
[ext_resource type="Script" uid="uid://d11ymn4s33jgm" path="res://persistancy_system/event_evaluator.gd" id="13_c1h52"]
[ext_resource type="Script" uid="uid://davfd8xpi1i3t" path="res://persistancy_system/conditionals/bool_event_conditional.gd" id="14_p8nbk"]
[ext_resource type="Texture2D" uid="uid://cia287ka8ueww" path="res://assets/GRAPHICS/Bountiful-Bits-v-3.1/Bountiful-Bits-10x10-v-3.1/1-Bit/no-background/Civilized-no-bg.png" id="15_k1va0"]
[ext_resource type="PackedScene" uid="uid://dgks666k0klxv" path="res://interactables/interactable_component/better_interactable_component.tscn" id="17_1rj40"]
[ext_resource type="PackedScene" uid="uid://b4jjcolqqt2xe" path="res://interactables/outline_component/outline_component.tscn" id="17_3xutp"]
[ext_resource type="Script" uid="uid://ckw8qr1c5qte8" path="res://persistancy_system/event_setter.gd" id="18_1rj40"]
[ext_resource type="PackedScene" uid="uid://dfx0iek5tccxc" path="res://inventory_system/pickable_item/pickable_item.tscn" id="19_k3723"]
[ext_resource type="Resource" uid="uid://dey4ggrhbbbmc" path="res://inventory_system/test_key.tres" id="20_mmugk"]
[ext_resource type="Script" uid="uid://crtby7posuy18" path="res://level_system/level_info.gd" id="21_p4h2e"]
[ext_resource type="PackedScene" uid="uid://b4er0ro4vssmy" path="res://level_system/level_transition_area.tscn" id="22_3as4t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wgs0e"]
shader = ExtResource("1_05qxl")
shader_parameter/palette_array_size = 0
shader_parameter/input_palette_texture = ExtResource("2_o0ok4")
shader_parameter/output_palette_texture = ExtResource("3_kubw5")
shader_parameter/input_palette_array = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/output_palette_array = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="Curve2D" id="Curve2D_wgs0e"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -200, 100, 0, 0, 0, 0, 370, 100)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_c1h52"]
bake_interval = 50.0
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 160, 20, 0, 0, 0, 0, 160, 180)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_drtee"]
bake_interval = 50.0
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 210, -50, 0, 0, 0, 0, 340, -50)
}
point_count = 2

[sub_resource type="GDScript" id="GDScript_3xutp"]
script/source = "extends Node2D

func _ready() -> void:
	GlobalSignal.event_set.connect(_on_event_set)
	$BetterInteractableComponent.on_interact.connect(_on_better_interactable_component_on_interact)

func _on_event_set(ev, _cached_events):
	if ev.name == $PersistentEventSetter.event_name:
		$BetterInteractableComponent.is_interactable = false

func _on_better_interactable_component_on_interact() -> void:
	$PersistentEventSetter.set_event(1.0)
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3as4t"]
size = Vector2(40, 20)

[node name="BiggerSceneTest" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
material = SubResource("ShaderMaterial_wgs0e")
tile_map_data = PackedByteArray("AAD7/wkAAwAdAAEAAAD7/w4AAwAcAAIAAAD7/xMAAwAdAAUAAAD8//z/AwAcAAMAAAD8/w4AAwAaAAMAAAD9//7/AwAcAAQAAAD9/wkAAwAaAAQAAAD///7/AwAaAAIAAAD//wgAAwAZAAEAAAD//w8AAwAbAAUAAAAAAPz/AwAcAAEAAAABAA0AAwAdAAEAAAACAAcAAwAdAAMAAAACABAAAwAdAAQAAAADAAIAAwAeAAQAAAADAAMAAwAdAAEAAAADABIAAwAaAAQAAAAEAAEAAwAZAAUAAAAFAAMAAwAaAAMAAAAFAAUAAwAZAAIAAAAGAAIAAwAcAAIAAAAGAAQAAwAaAAMAAAAHAAUAAwAdAAIAAAAIAP3/AwAaAAEAAAAIAP7/AwAdAAEAAAAIAAIAAwAZAAUAAAAIABEAAwAbAAEAAAAJAP7/AwAbAAIAAAAJAP//AwAcAAMAAAAJAAUAAwAdAAIAAAAJAAoAAwAZAAMAAAAJAA8AAwAcAAEAAAAKAPz/AwAeAAMAAAAKAAoAAwAZAAEAAAALAAEAAwAbAAUAAAALAA8AAwAdAAUAAAAMAP//AwAbAAQAAAANAPz/AwAbAAUAAAANAAEAAwAeAAEAAAANAAwAAwAdAAMAAAANAA4AAwAdAAQAAAANABAAAwAcAAEAAAAOAPz/AwAaAAEAAAAOAP7/AwAbAAMAAAAOAAkAAwAaAAUAAAAPAAMAAwAaAAQAAAAPABEAAwAZAAUAAAAPABMAAwAdAAMAAAAQAAEAAwAaAAQAAAAQAAoAAwAdAAUAAAARAP3/AwAdAAEAAAARAA0AAwAbAAUAAAASAPz/AwAdAAEAAAASABAAAwAaAAIAAAASABEAAwAcAAQAAAATAP//AwAeAAIAAAATAAkAAwAeAAIAAAAUAAAAAwAdAAUAAAAUAAEAAwAbAAMAAAAUABEAAwAdAAEAAAAVAAUAAwAbAAIAAAAVAAkAAwAdAAEAAAAVABEAAwAeAAIAAAAVABQAAwAaAAIAAAAWAAYAAwAcAAIAAAAYAPz/AwAeAAMAAAAYAAUAAwAeAAUAAAAYAA0AAwAbAAEAAAAYABMAAwAbAAQAAAAZAP3/AwAaAAQAAAAZAAMAAwAbAAMAAAAZAAYAAwAbAAEAAAAZAAoAAwAcAAUAAAAZABQAAwAZAAUAAAAaAAcAAwAaAAQAAAAaAA0AAwAcAAEAAAAaABEAAwAZAAQAAADr//X/AwAHAAMAAADr//b/AwAHAAMAAADr//f/AwAHAAMAAADr//j/AwAHAAMAAADr//n/AwAHAAMAAADr//r/AwAHAAMAAADr//v/AwAHAAMAAADr//z/AwAHAAMAAADr//3/AwAHAAMAAADr//7/AwAHAAMAAADr////AwAHAAMAAADr/wAAAwAHAAMAAADr/wEAAwAHAAMAAADr/wIAAwAHAAMAAADr/wMAAwAHAAMAAADr/wQAAwAHAAMAAADr/wUAAwAHAAMAAADr/wYAAwAHAAMAAADr/wcAAwAHAAMAAADr/wgAAwAHAAMAAADr/wkAAwAHAAMAAADr/woAAwAHAAMAAADr/wsAAwAHAAMAAADr/wwAAwAHAAMAAADr/w0AAwAHAAMAAADr/w4AAwAHAAMAAADr/w8AAwAHAAMAAADr/xAAAwAHAAMAAADr/xEAAwAHAAMAAADr/xIAAwAHAAMAAADr/xMAAwAHAAMAAADr/xQAAwAHAAMAAADs//X/AwAHAAMAAADs//b/AwAHAAMAAADt//X/AwAHAAMAAADt//b/AwAHAAMAAADu//X/AwAHAAMAAADu//b/AwAHAAMAAADv//X/AwAHAAMAAADv//b/AwAHAAMAAADw//X/AwAHAAMAAADw//b/AwAHAAMAAAD2//X/AwAHAAMAAAD2//b/AwAHAAMAAAD3//X/AwAHAAMAAAD3//b/AwAHAAMAAAD4//X/AwAHAAMAAAD4//b/AwAHAAMAAAD5//X/AwAHAAMAAAD5//b/AwAHAAMAAAD6//X/AwAHAAMAAAD6//b/AwAHAAMAAAD7//X/AwAHAAMAAAD7//b/AwAHAAMAAAD8//X/AwAHAAMAAAD8//b/AwAHAAMAAAD9//X/AwAHAAMAAAD9//b/AwAHAAMAAAD+//X/AwAHAAMAAAD+//b/AwAHAAMAAAD///X/AwAHAAMAAAD///b/AwAHAAMAAAAAAPX/AwAHAAMAAAAAAPb/AwAHAAMAAAABAPX/AwAHAAMAAAABAPb/AwAHAAMAAAACAPX/AwAHAAMAAAACAPb/AwAHAAMAAAADAPX/AwAHAAMAAAADAPb/AwAHAAMAAAAEAPX/AwAHAAMAAAAEAPb/AwAHAAMAAAAFAPX/AwAHAAMAAAAFAPb/AwAHAAMAAAAGAPX/AwAHAAMAAAAGAPb/AwAHAAMAAAAHAPX/AwAHAAMAAAAHAPb/AwAHAAMAAAAIAPX/AwAHAAMAAAAIAPb/AwAHAAMAAAAJAPX/AwAHAAMAAAAJAPb/AwAHAAMAAAAKAPX/AwAHAAMAAAAKAPb/AwAHAAMAAAALAPX/AwAHAAMAAAALAPb/AwAHAAMAAAAMAPX/AwAHAAMAAAAMAPb/AwAHAAMAAAANAPX/AwAHAAMAAAANAPb/AwAHAAMAAAAOAPX/AwAHAAMAAAAOAPb/AwAHAAMAAAAPAPX/AwAHAAMAAAAPAPb/AwAHAAMAAAAQAPX/AwAHAAMAAAAQAPb/AwAHAAMAAAARAPX/AwAHAAMAAAARAPb/AwAHAAMAAAASAPX/AwAHAAMAAAASAPb/AwAHAAMAAAATAPX/AwAHAAMAAAATAPb/AwAHAAMAAAAUAPX/AwAHAAMAAAAUAPb/AwAHAAMAAAAVAPX/AwAHAAMAAAAVAPb/AwAHAAMAAAAWAPX/AwAHAAMAAAAWAPb/AwAHAAMAAAAXAPX/AwAHAAMAAAAXAPb/AwAHAAMAAAAYAPX/AwAHAAMAAAAYAPb/AwAHAAMAAAAZAPX/AwAHAAMAAAAZAPb/AwAHAAMAAAAaAPX/AwAHAAMAAAAaAPb/AwAHAAMAAAAbAPX/AwAHAAMAAAAbAPb/AwAHAAMAAAAcAPX/AwAHAAMAAAAcAPb/AwAHAAMAAAAdAPX/AwAHAAMAAAAdAPb/AwAHAAMAAAAeAPX/AwAHAAMAAAAeAPb/AwAHAAMAAAAfAPX/AwAHAAMAAAAfAPb/AwAHAAMAAAAgAPX/AwAHAAMAAAAgAPb/AwAHAAMAAAAhAPX/AwAHAAMAAAAhAPb/AwAHAAMAAAAiAPX/AwAHAAMAAAAiAPb/AwAHAAMAAAAjAPX/AwAHAAMAAAAjAPb/AwAHAAMAAAAkAPX/AwAHAAMAAAAkAPb/AwAHAAMAAAAlAPX/AwAHAAMAAAAlAPb/AwAHAAMAAAAlAPf/AwAHAAMAAAAlAPj/AwAHAAMAAAAlAPn/AwAHAAMAAAAlAPr/AwAHAAMAAAAlAPv/AwAHAAMAAAAlAPz/AwAHAAMAAAAlAP3/AwAHAAMAAAAlAP7/AwAHAAMAAAAlAP//AwAHAAMAAAAlAAAAAwAHAAMAAAAlAAEAAwAHAAMAAAAlAAIAAwAHAAMAAAAlAAMAAwAHAAMAAAAlAAQAAwAHAAMAAAAlAAUAAwAHAAMAAAAlAAYAAwAHAAMAAAAlAAcAAwAHAAMAAAAlAAgAAwAHAAMAAAAlAAkAAwAHAAMAAAAlAAoAAwAHAAMAAAAlAAsAAwAHAAMAAAAlAAwAAwAHAAMAAAAlAA0AAwAHAAMAAAAlAA4AAwAHAAMAAAAlAA8AAwAHAAMAAAAlABAAAwAHAAMAAAAlABEAAwAHAAMAAAAlABIAAwAHAAMAAAAlABMAAwAHAAMAAAAlABQAAwAHAAMAAAAlABUAAwAHAAMAAAAlABYAAwAHAAMAAADr/xUAAwAHAAMAAADr/xYAAwAHAAMAAADs/xUAAwAHAAMAAADs/xYAAwAHAAMAAADt/xUAAwAHAAMAAADt/xYAAwAHAAMAAADu/xUAAwAHAAMAAADu/xYAAwAHAAMAAADv/xUAAwAHAAMAAADv/xYAAwAHAAMAAADw/xUAAwAHAAMAAADw/xYAAwAHAAMAAADx/xUAAwAHAAMAAADx/xYAAwAHAAMAAADy/xUAAwAHAAMAAADy/xYAAwAHAAMAAADz/xUAAwAHAAMAAADz/xYAAwAHAAMAAAD0/xUAAwAHAAMAAAD0/xYAAwAHAAMAAAD1/xUAAwAHAAMAAAD1/xYAAwAHAAMAAAD2/xUAAwAHAAMAAAD2/xYAAwAHAAMAAAD3/xUAAwAHAAMAAAD3/xYAAwAHAAMAAAD4/xUAAwAHAAMAAAD4/xYAAwAHAAMAAAD5/xUAAwAHAAMAAAD5/xYAAwAHAAMAAAD6/xUAAwAHAAMAAAD6/xYAAwAHAAMAAAD7/xUAAwAHAAMAAAD7/xYAAwAHAAMAAAD8/xUAAwAHAAMAAAD8/xYAAwAHAAMAAAD9/xUAAwAHAAMAAAD9/xYAAwAHAAMAAAD+/xUAAwAHAAMAAAD+/xYAAwAHAAMAAAD//xUAAwAHAAMAAAD//xYAAwAHAAMAAAAAABUAAwAHAAMAAAAAABYAAwAHAAMAAAABABUAAwAHAAMAAAABABYAAwAHAAMAAAACABUAAwAHAAMAAAACABYAAwAHAAMAAAADABUAAwAHAAMAAAADABYAAwAHAAMAAAAEABUAAwAHAAMAAAAEABYAAwAHAAMAAAAFABUAAwAHAAMAAAAFABYAAwAHAAMAAAAGABUAAwAHAAMAAAAGABYAAwAHAAMAAAAHABUAAwAHAAMAAAAHABYAAwAHAAMAAAAIABUAAwAHAAMAAAAIABYAAwAHAAMAAAAJABUAAwAHAAMAAAAJABYAAwAHAAMAAAAKABUAAwAHAAMAAAAKABYAAwAHAAMAAAALABUAAwAHAAMAAAALABYAAwAHAAMAAAAMABUAAwAHAAMAAAAMABYAAwAHAAMAAAANABUAAwAHAAMAAAANABYAAwAHAAMAAAAOABUAAwAHAAMAAAAOABYAAwAHAAMAAAAPABUAAwAHAAMAAAAPABYAAwAHAAMAAAAQABUAAwAHAAMAAAAQABYAAwAHAAMAAAARABUAAwAHAAMAAAARABYAAwAHAAMAAAASABUAAwAHAAMAAAASABYAAwAHAAMAAAATABUAAwAHAAMAAAATABYAAwAHAAMAAAAUABUAAwAHAAMAAAAUABYAAwAHAAMAAAAVABUAAwAHAAMAAAAVABYAAwAHAAMAAAAWABUAAwAHAAMAAAAWABYAAwAHAAMAAAAXABUAAwAHAAMAAAAXABYAAwAHAAMAAAAYABUAAwAHAAMAAAAYABYAAwAHAAMAAAAZABUAAwAHAAMAAAAZABYAAwAHAAMAAAAaABUAAwAHAAMAAAAaABYAAwAHAAMAAAAbABUAAwAHAAMAAAAbABYAAwAHAAMAAAAcABUAAwAHAAMAAAAcABYAAwAHAAMAAAAdABUAAwAHAAMAAAAdABYAAwAHAAMAAAAeABUAAwAHAAMAAAAeABYAAwAHAAMAAAAfABUAAwAHAAMAAAAfABYAAwAHAAMAAAAgABUAAwAHAAMAAAAgABYAAwAHAAMAAAAhABUAAwAHAAMAAAAhABYAAwAHAAMAAAAiABUAAwAHAAMAAAAiABYAAwAHAAMAAAAjABUAAwAHAAMAAAAjABYAAwAHAAMAAAAkABUAAwAHAAMAAAAkABYAAwAHAAMAAADx//X/AwAHAAMAAADx//b/AwAHAAMAAAA=")
tile_set = ExtResource("4_s0suj")

[node name="Player" parent="." instance=ExtResource("5_o0ok4")]

[node name="Camera2D" type="Camera2D" parent="Player"]
position_smoothing_enabled = true

[node name="DeathZone" parent="." instance=ExtResource("6_kubw5")]
position = Vector2(0, 9)
curve = SubResource("Curve2D_wgs0e")
width = 120.0

[node name="Area2D" type="Area2D" parent="DeathZone"]
collision_layer = 32
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DeathZone/Area2D"]
polygon = PackedVector2Array(-200, 160, 370, 160, 370, 40, -200, 40)

[node name="Polygon2D" type="Polygon2D" parent="DeathZone"]
material = ExtResource("7_wgs0e")
texture = ExtResource("8_tig7g")
polygon = PackedVector2Array(-200, 160, 370, 160, 370, 40, -200, 40)

[node name="AirCurrent" parent="." instance=ExtResource("10_drtee")]
curve = SubResource("Curve2D_c1h52")

[node name="Area2D" type="Area2D" parent="AirCurrent"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AirCurrent/Area2D"]
polygon = PackedVector2Array(185, 20.000002, 185, 45, 185, 70.625, 185, 100, 185, 129.375, 185, 155, 185, 175.51999, 135, 175.51999, 135, 155, 135, 129.375, 135, 100, 135, 70.625, 135, 45, 135, 19.999998)

[node name="Polygon2D" type="Polygon2D" parent="AirCurrent"]
color = Color(1, 1, 1, 0.3)
polygon = PackedVector2Array(185, 20.000002, 185, 45, 185, 70.625, 185, 100, 185, 129.375, 185, 155, 185, 175.51999, 135, 175.51999, 135, 155, 135, 129.375, 135, 100, 135, 70.625, 135, 45, 135, 19.999998)

[node name="AirCurrentFollower" type="PathFollow2D" parent="AirCurrent"]
position = Vector2(160, 20)
rotation = 1.5707964
rotates = false
script = ExtResource("11_8tme2")

[node name="AirCurrent2" parent="." instance=ExtResource("10_drtee")]
curve = SubResource("Curve2D_drtee")

[node name="Area2D" type="Area2D" parent="AirCurrent2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AirCurrent2/Area2D"]
polygon = PackedVector2Array(210, -75, 230.3125, -75, 275, -75, 319.6875, -75, 336.36, -75, 336.36, -25, 319.6875, -25, 275, -25, 230.3125, -25, 210, -25)

[node name="Polygon2D" type="Polygon2D" parent="AirCurrent2"]
color = Color(1, 1, 1, 0.3)
polygon = PackedVector2Array(210, -75, 230.3125, -75, 275, -75, 319.6875, -75, 336.36, -75, 336.36, -25, 319.6875, -25, 275, -25, 230.3125, -25, 210, -25)

[node name="AirCurrentFollower" type="PathFollow2D" parent="AirCurrent2"]
position = Vector2(210, -50)
rotates = false
script = ExtResource("11_8tme2")

[node name="Platform1" type="Node2D" parent="."]

[node name="PlatformSmall" parent="Platform1" instance=ExtResource("9_tig7g")]
visible = false
position = Vector2(0, 90)

[node name="ToggleAction" type="Node" parent="Platform1" node_paths=PackedStringArray("evaluator", "target")]
script = ExtResource("12_8tme2")
evaluator = NodePath("../PersistentEventEvaluator")
target = NodePath("../PlatformSmall")
metadata/_custom_type_script = "uid://cj5j4ybo5t3eq"

[node name="PersistentEventEvaluator" type="Node" parent="Platform1"]
script = ExtResource("13_c1h52")
metadata/_custom_type_script = "uid://d11ymn4s33jgm"

[node name="PersistentEventConditional" type="Node" parent="Platform1/PersistentEventEvaluator"]
script = ExtResource("14_p8nbk")
event_name = "test_button_1_toggled"
metadata/_custom_type_script = "uid://b1eh2ermrxebx"

[node name="TestButton" type="Node2D" parent="."]
position = Vector2(-90, 0)
script = SubResource("GDScript_3xutp")

[node name="Sprite2D" type="Sprite2D" parent="TestButton"]
texture = ExtResource("15_k1va0")
region_enabled = true
region_rect = Rect2(130, 110, 10, 10)

[node name="PersistentEventSetter" type="Node" parent="TestButton"]
script = ExtResource("18_1rj40")
event_name = "test_button_1_toggled"
metadata/_custom_type_script = "uid://ckw8qr1c5qte8"

[node name="BetterInteractableComponent" parent="TestButton" instance=ExtResource("17_1rj40")]

[node name="OutlineComponent" parent="TestButton/BetterInteractableComponent" node_paths=PackedStringArray("sprite") instance=ExtResource("17_3xutp")]
sprite = NodePath("../../Sprite2D")
override_color_when_disabled = true
override_color_value = Color(1, 1, 1, 0.56078434)

[node name="PickableItem" parent="." instance=ExtResource("19_k3723")]
position = Vector2(110, -40)
item = ExtResource("20_mmugk")
event_name = "item_test_key_picked_up"

[node name="LevelInfo" type="Node" parent="."]
script = ExtResource("21_p4h2e")
level_name = "bigger_scene_test"
id = "94855750-2b6c-43c5-8d48-fe974084d9ee"
metadata/_custom_type_script = "uid://crtby7posuy18"

[node name="LevelTransitionArea" parent="." instance=ExtResource("22_3as4t")]
position = Vector2(-120, -100)
next_level_id = "level2w"

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelTransitionArea"]
shape = SubResource("RectangleShape2D_3as4t")
